重构代码结构，更新包名为 com.dbeaver.agent，支持 DBeaver 25.x 版本