@@ -1,77 +1,98 @@
 [中文说明](README.md)
-# DBeaver Agent for 24.x
 
-This branch is specifically for version `24.x`. For other lower versions, please refer to the `master` branch.
+# DBeaver Agent for 25.x
+
+This branch targets the `25.x` version. If you need to reference the `24.x` version, please see the [v24.0](https://github.com/wgzhao/dbeaver-agent/tree/v24.0). For other older
+versions, please refer to the `master` branch.
 
 ## Supported Versions
 
-- `24.3`
-- `24.2`
-- `24.1.x`
-- `24.0.x`
+- **Supported DBeaver Version**: `25.0`
 
 ## Dependencies
 
-Since the unit tests utilize code from DBeaver, you need to prepare some DBeaver packages. Place the following packages into the `libs` folder:
+To run unit tests, you need to prepare the following DBeaver packages and place them in the `libs` folder:
 
-- `com.dbeaver.ee.runtime`: Basic runtime, contains information for obtaining keys, etc.
-- `com.dbeaver.lm.api`: License core
-- `org.jkiss.utils`: Provides components for license generation
-- For DBeaverUltimate, the public key is located in `com.dbeaver.app.ultimate`
-- For Cloudeaver, the public key is located in `io.cloudbeaver.product.ee`
+- `com.dbeaver.ee.runtime`: The core runtime that contains components required for obtaining keys and other information.
+- `com.dbeaver.lm.api`: The core library for license management.
+- `org.jkiss.utils`: Provides utility components for license generation.
+- For DBeaver Ultimate, the public key is located in `com.dbeaver.app.ultimate`.
+- For CloudBeaver, the public key is located in `io.cloudbeaver.product.ee`.
 
-## Usage
+## Usage Instructions
 
-Simply build the project using `mvn package`. The generated `dbeaver-agent.jar` can be placed anywhere you prefer.
+### 1. Build the Project
 
-> However, it is recommended to place it in the installation directory.
+First, use Maven to build the project, which will generate a jar file containing all dependencies:
 
-Modify the `dbeaver.ini` file in the DBeaver installation directory to add some parameters. Add `-javaagent:{your jar path}` and `-Xbootclasspath/a:{your jar path}` right below the `-vmargs` line, like this:
+```bash
+mvn package
+```
+
+The generated file can be found at `target/dbeaver-agent-25.0-SNAPSHOT-jar-with-dependencies.jar`.
+
+### 2. Install DBeaver Agent
+
+Move the generated jar file to the DBeaver installation path (recommended):
+
+```shell
+cp target/dbeaver-agent-25.0-SNAPSHOT-jar-with-dependencies.jar /usr/share/dbeaver/dbeaver-agent.jar
+```
+
+### 3. Configure DBeaver
+
+Modify the `dbeaver.ini` file in the DBeaver installation directory and add the following parameters:
 
 ```ini
--startup
-plugins/org.eclipse.equinox.launcher_1.6.100.v20201223-0822.jar
---launcher.library
-plugins/org.eclipse.equinox.launcher.gtk.linux.x86_64_1.2.100.v20210209-1541
 -vmargs
 -javaagent:/usr/share/dbeaver/dbeaver-agent.jar
--Xbootclasspath/a:/usr/share/dbeaver/dbeaver-agent.jar
--XX:+IgnoreUnrecognizedVMOptions
---add-modules=ALL-SYSTEM
--Dosgi.requiredJavaVersion=11
--Xms128m
--Xmx2048m
+-Xbootclasspath/a: /usr/share/dbeaver/dbeaver-agent.jar
 ```
 
-Then, you need to remove the bundled JRE from DBeaver.
+Make sure these parameters are placed below `-vmargs`.
 
-> For DBeaver >= 24, you need to provide Java 17 yourself.
+### 4. Handle JRE Dependencies
 
-## Generating License Keys
+If you are using JRE 21 and it can be found in the system path, no additional operations are required. If the default JRE version is not 21, copy the installed JRE to the DBeaver
+installation directory so that it is at the same level as the built-in `jre` folder. Non-Windows systems can also use symbolic links.
 
-Command-line key generation is now supported. Run the following command:
+### 5. Block the stats.dbeaver.com Domain
+
+To prevent DBeaver from sending data to stats.dbeaver.com, you can block the domain by modifying the hosts file. Add the following entry to the hosts file:
 
 ```shell
-java -cp libs/\*:./target/dbeaver-agent-1.0-SNAPSHOT-jar-with-dependencies.jar \
-    dev.misakacloud.dbee.License
+127.0.0.1 stats.dbeaver.com
 ```
 
-By default, the generated key is for `Dbeaver Enterprise Edition 24.0`. If you need keys for other types, you can specify them using the following parameters:
+## Generate License Key
+
+Now, you can generate a license key via the command line by running the following command:
+
+```bash
+java -cp libs/\*:./target/dbeaver-agent-25.0-SNAPSHOT-jar-with-dependencies.jar \
+    com.dbeaver.agent.License
+```
+
+This command will generate a license key for the DBeaver Enterprise Edition 25.0 by default. If you need to generate keys for other types, you can specify using the following
+parameters:
 
 ```shell
-java -cp libs/\*:./target/dbeaver-agent-1.0-SNAPSHOT-jar-with-dependencies.jar \
-    dev.misakacloud.dbee.License -h
+java -cp libs/\*:./target/dbeaver-agent-25.0-SNAPSHOT-jar-with-dependencies.jar \
+com.dbeaver.agent.License -h
 
-Usage: gen-license [-h] [-p=<productName>] [-t=<licenseType>]
-                   [-v=<productVersion>]
+Usage: gen-license [-h] [-p=<productName>] [-t=<licenseType>] [-v=<productVersion>]
 Generate DBeaver license
-  -h, --help
-  -p, --product=<productName>
-                             Product name, you can choose dbeaver or
-                               cloudbeaver, default is dbeaver
-  -t, --type=<licenseType>   License type, you can choose Lite version(le),
-                               Enterprise version(ee) or Ultimate version(ue)
-                               default is ue
-  -v, --version=<productVersion>
-                             Product version, default is 24
+-h, --help                   Show help information
+-p, --product=<productName>  Optional: Specify product name, options include dbeaver or cloudbeaver, default is dbeaver
+-t, --type=<licenseType>     Optional: Specify license type, options include Lite version(le), Enterprise version(ee) or Ultimate version(ue), default is ue
+-v, --version=<productVersion> Optional: Specify product version, default is 25
+```
+
+## First-time License Registration
+
+When registering the license for the first time, it is recommended to start DBeaver from the command line to observe detailed log messages, which can help in troubleshooting.
+
+```shell
+# Example command to start DBeaver
+/path/to/dbeaver/dbeaver
 ```
